--- a/Api-Nodejs-Express-MongoDb-AngularJs/package.json
+++ b/Api-Nodejs-Express-MongoDb-AngularJs/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "apinew",
+  "name": "apimongodbangularandnode",
   "version": "1.0.0",
-  "description": "",
+  "description": "agendapop",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,8 +13,5 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mongoose": "^4.11.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
   }
 }
